// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing LoggedInPerson component renders as expected with params 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoggedInPerson
    history={
        Array [
            "/home",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className={undefined}
>
          <span>
                    
          </span>
</div>,
        <Dropdown
          active={false}
          addonType={false}
          className={undefined}
          direction="down"
          inNavbar={false}
          isOpen={false}
          nav={false}
          onClick={undefined}
          setActiveFromChild={false}
          toggle={[Function]}
>
          <DropdownToggle
                    aria-expanded={false}
                    aria-haspopup={true}
                    caret={true}
                    color="secondary"
                    data-toggle="dropdown"
                    tag="span"
          >
                    Bonjour undefined !
          </DropdownToggle>
          <DropdownMenu
                    flip={true}
                    tag="div"
          >
                    <p>
                              undefined undefined
                    </p>
                    <span />
                    <span />
                    <div
                              className={undefined}
                    >
                              <NavLink
                                        href="/myProfile/personalInformation"
                                        tag="a"
                              >
                                        <Button
                                                  className={undefined}
                                                  color="secondary"
                                                  tag="button"
                                        />
                              </NavLink>
                              <NavLink
                                        href="/myProfile/alerts"
                                        tag="a"
                              >
                                        <Button
                                                  className={undefined}
                                                  color="secondary"
                                                  tag="button"
                                        />
                              </NavLink>
                              <Button
                                        className={undefined}
                                        color="secondary"
                                        onClick={[Function]}
                                        tag="button"
                              />
                    </div>
          </DropdownMenu>
</Dropdown>,
      ],
      "className": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            
</span>,
          "className": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
          ],
          "type": "span",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "active": false,
          "addonType": false,
          "children": Array [
            <DropdownToggle
              aria-expanded={false}
              aria-haspopup={true}
              caret={true}
              color="secondary"
              data-toggle="dropdown"
              tag="span"
>
              Bonjour undefined !
</DropdownToggle>,
            <DropdownMenu
              flip={true}
              tag="div"
>
              <p>
                            undefined undefined
              </p>
              <span />
              <span />
              <div
                            className={undefined}
              >
                            <NavLink
                                          href="/myProfile/personalInformation"
                                          tag="a"
                            >
                                          <Button
                                                        className={undefined}
                                                        color="secondary"
                                                        tag="button"
                                          />
                            </NavLink>
                            <NavLink
                                          href="/myProfile/alerts"
                                          tag="a"
                            >
                                          <Button
                                                        className={undefined}
                                                        color="secondary"
                                                        tag="button"
                                          />
                            </NavLink>
                            <Button
                                          className={undefined}
                                          color="secondary"
                                          onClick={[Function]}
                                          tag="button"
                            />
              </div>
</DropdownMenu>,
          ],
          "className": undefined,
          "direction": "down",
          "inNavbar": false,
          "isOpen": false,
          "nav": false,
          "onClick": undefined,
          "setActiveFromChild": false,
          "toggle": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "aria-expanded": false,
              "aria-haspopup": true,
              "caret": true,
              "children": "Bonjour undefined !",
              "color": "secondary",
              "data-toggle": "dropdown",
              "tag": "span",
            },
            "ref": null,
            "rendered": "Bonjour undefined !",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <p>
                  undefined undefined
</p>,
                <span />,
                <span />,
                <div
                  className={undefined}
>
                  <NavLink
                                    href="/myProfile/personalInformation"
                                    tag="a"
                  >
                                    <Button
                                                      className={undefined}
                                                      color="secondary"
                                                      tag="button"
                                    />
                  </NavLink>
                  <NavLink
                                    href="/myProfile/alerts"
                                    tag="a"
                  >
                                    <Button
                                                      className={undefined}
                                                      color="secondary"
                                                      tag="button"
                                    />
                  </NavLink>
                  <Button
                                    className={undefined}
                                    color="secondary"
                                    onClick={[Function]}
                                    tag="button"
                  />
</div>,
              ],
              "flip": true,
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "undefined undefined",
                },
                "ref": null,
                "rendered": "undefined undefined",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <NavLink
                      href="/myProfile/personalInformation"
                      tag="a"
>
                      <Button
                                            className={undefined}
                                            color="secondary"
                                            tag="button"
                      />
</NavLink>,
                    <NavLink
                      href="/myProfile/alerts"
                      tag="a"
>
                      <Button
                                            className={undefined}
                                            color="secondary"
                                            tag="button"
                      />
</NavLink>,
                    <Button
                      className={undefined}
                      color="secondary"
                      onClick={[Function]}
                      tag="button"
/>,
                  ],
                  "className": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Button
                        className={undefined}
                        color="secondary"
                        tag="button"
/>,
                      "href": "/myProfile/personalInformation",
                      "tag": "a",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "color": "secondary",
                        "tag": "button",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Button
                        className={undefined}
                        color="secondary"
                        tag="button"
/>,
                      "href": "/myProfile/alerts",
                      "tag": "a",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "color": "secondary",
                        "tag": "button",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "color": "secondary",
                      "onClick": [Function],
                      "tag": "button",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className={undefined}
>
            <span>
                        
            </span>
</div>,
          <Dropdown
            active={false}
            addonType={false}
            className={undefined}
            direction="down"
            inNavbar={false}
            isOpen={false}
            nav={false}
            onClick={undefined}
            setActiveFromChild={false}
            toggle={[Function]}
>
            <DropdownToggle
                        aria-expanded={false}
                        aria-haspopup={true}
                        caret={true}
                        color="secondary"
                        data-toggle="dropdown"
                        tag="span"
            >
                        Bonjour undefined !
            </DropdownToggle>
            <DropdownMenu
                        flip={true}
                        tag="div"
            >
                        <p>
                                    undefined undefined
                        </p>
                        <span />
                        <span />
                        <div
                                    className={undefined}
                        >
                                    <NavLink
                                                href="/myProfile/personalInformation"
                                                tag="a"
                                    >
                                                <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                                />
                                    </NavLink>
                                    <NavLink
                                                href="/myProfile/alerts"
                                                tag="a"
                                    >
                                                <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                                />
                                    </NavLink>
                                    <Button
                                                className={undefined}
                                                color="secondary"
                                                onClick={[Function]}
                                                tag="button"
                                    />
                        </div>
            </DropdownMenu>
</Dropdown>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              
</span>,
            "className": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
            ],
            "type": "span",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "addonType": false,
            "children": Array [
              <DropdownToggle
                aria-expanded={false}
                aria-haspopup={true}
                caret={true}
                color="secondary"
                data-toggle="dropdown"
                tag="span"
>
                Bonjour undefined !
</DropdownToggle>,
              <DropdownMenu
                flip={true}
                tag="div"
>
                <p>
                                undefined undefined
                </p>
                <span />
                <span />
                <div
                                className={undefined}
                >
                                <NavLink
                                                href="/myProfile/personalInformation"
                                                tag="a"
                                >
                                                <Button
                                                                className={undefined}
                                                                color="secondary"
                                                                tag="button"
                                                />
                                </NavLink>
                                <NavLink
                                                href="/myProfile/alerts"
                                                tag="a"
                                >
                                                <Button
                                                                className={undefined}
                                                                color="secondary"
                                                                tag="button"
                                                />
                                </NavLink>
                                <Button
                                                className={undefined}
                                                color="secondary"
                                                onClick={[Function]}
                                                tag="button"
                                />
                </div>
</DropdownMenu>,
            ],
            "className": undefined,
            "direction": "down",
            "inNavbar": false,
            "isOpen": false,
            "nav": false,
            "onClick": undefined,
            "setActiveFromChild": false,
            "toggle": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "aria-expanded": false,
                "aria-haspopup": true,
                "caret": true,
                "children": "Bonjour undefined !",
                "color": "secondary",
                "data-toggle": "dropdown",
                "tag": "span",
              },
              "ref": null,
              "rendered": "Bonjour undefined !",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <p>
                    undefined undefined
</p>,
                  <span />,
                  <span />,
                  <div
                    className={undefined}
>
                    <NavLink
                                        href="/myProfile/personalInformation"
                                        tag="a"
                    >
                                        <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                        />
                    </NavLink>
                    <NavLink
                                        href="/myProfile/alerts"
                                        tag="a"
                    >
                                        <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                        />
                    </NavLink>
                    <Button
                                        className={undefined}
                                        color="secondary"
                                        onClick={[Function]}
                                        tag="button"
                    />
</div>,
                ],
                "flip": true,
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "undefined undefined",
                  },
                  "ref": null,
                  "rendered": "undefined undefined",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <NavLink
                        href="/myProfile/personalInformation"
                        tag="a"
>
                        <Button
                                                className={undefined}
                                                color="secondary"
                                                tag="button"
                        />
</NavLink>,
                      <NavLink
                        href="/myProfile/alerts"
                        tag="a"
>
                        <Button
                                                className={undefined}
                                                color="secondary"
                                                tag="button"
                        />
</NavLink>,
                      <Button
                        className={undefined}
                        color="secondary"
                        onClick={[Function]}
                        tag="button"
/>,
                    ],
                    "className": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Button
                          className={undefined}
                          color="secondary"
                          tag="button"
/>,
                        "href": "/myProfile/personalInformation",
                        "tag": "a",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "className": undefined,
                          "color": "secondary",
                          "tag": "button",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Button
                          className={undefined}
                          color="secondary"
                          tag="button"
/>,
                        "href": "/myProfile/alerts",
                        "tag": "a",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "className": undefined,
                          "color": "secondary",
                          "tag": "button",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "color": "secondary",
                        "onClick": [Function],
                        "tag": "button",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing LoggedInPerson component renders as expected without params 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoggedInPerson />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className={undefined}
>
          <span>
                    
          </span>
</div>,
        <Dropdown
          active={false}
          addonType={false}
          className={undefined}
          direction="down"
          inNavbar={false}
          isOpen={false}
          nav={false}
          onClick={undefined}
          setActiveFromChild={false}
          toggle={[Function]}
>
          <DropdownToggle
                    aria-expanded={false}
                    aria-haspopup={true}
                    caret={true}
                    color="secondary"
                    data-toggle="dropdown"
                    tag="span"
          >
                    Bonjour undefined !
          </DropdownToggle>
          <DropdownMenu
                    flip={true}
                    tag="div"
          >
                    <p>
                              undefined undefined
                    </p>
                    <span />
                    <span />
                    <div
                              className={undefined}
                    >
                              <NavLink
                                        href="/myProfile/personalInformation"
                                        tag="a"
                              >
                                        <Button
                                                  className={undefined}
                                                  color="secondary"
                                                  tag="button"
                                        />
                              </NavLink>
                              <NavLink
                                        href="/myProfile/alerts"
                                        tag="a"
                              >
                                        <Button
                                                  className={undefined}
                                                  color="secondary"
                                                  tag="button"
                                        />
                              </NavLink>
                              <Button
                                        className={undefined}
                                        color="secondary"
                                        onClick={[Function]}
                                        tag="button"
                              />
                    </div>
          </DropdownMenu>
</Dropdown>,
      ],
      "className": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            
</span>,
          "className": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
          ],
          "type": "span",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "active": false,
          "addonType": false,
          "children": Array [
            <DropdownToggle
              aria-expanded={false}
              aria-haspopup={true}
              caret={true}
              color="secondary"
              data-toggle="dropdown"
              tag="span"
>
              Bonjour undefined !
</DropdownToggle>,
            <DropdownMenu
              flip={true}
              tag="div"
>
              <p>
                            undefined undefined
              </p>
              <span />
              <span />
              <div
                            className={undefined}
              >
                            <NavLink
                                          href="/myProfile/personalInformation"
                                          tag="a"
                            >
                                          <Button
                                                        className={undefined}
                                                        color="secondary"
                                                        tag="button"
                                          />
                            </NavLink>
                            <NavLink
                                          href="/myProfile/alerts"
                                          tag="a"
                            >
                                          <Button
                                                        className={undefined}
                                                        color="secondary"
                                                        tag="button"
                                          />
                            </NavLink>
                            <Button
                                          className={undefined}
                                          color="secondary"
                                          onClick={[Function]}
                                          tag="button"
                            />
              </div>
</DropdownMenu>,
          ],
          "className": undefined,
          "direction": "down",
          "inNavbar": false,
          "isOpen": false,
          "nav": false,
          "onClick": undefined,
          "setActiveFromChild": false,
          "toggle": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "aria-expanded": false,
              "aria-haspopup": true,
              "caret": true,
              "children": "Bonjour undefined !",
              "color": "secondary",
              "data-toggle": "dropdown",
              "tag": "span",
            },
            "ref": null,
            "rendered": "Bonjour undefined !",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <p>
                  undefined undefined
</p>,
                <span />,
                <span />,
                <div
                  className={undefined}
>
                  <NavLink
                                    href="/myProfile/personalInformation"
                                    tag="a"
                  >
                                    <Button
                                                      className={undefined}
                                                      color="secondary"
                                                      tag="button"
                                    />
                  </NavLink>
                  <NavLink
                                    href="/myProfile/alerts"
                                    tag="a"
                  >
                                    <Button
                                                      className={undefined}
                                                      color="secondary"
                                                      tag="button"
                                    />
                  </NavLink>
                  <Button
                                    className={undefined}
                                    color="secondary"
                                    onClick={[Function]}
                                    tag="button"
                  />
</div>,
              ],
              "flip": true,
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "undefined undefined",
                },
                "ref": null,
                "rendered": "undefined undefined",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <NavLink
                      href="/myProfile/personalInformation"
                      tag="a"
>
                      <Button
                                            className={undefined}
                                            color="secondary"
                                            tag="button"
                      />
</NavLink>,
                    <NavLink
                      href="/myProfile/alerts"
                      tag="a"
>
                      <Button
                                            className={undefined}
                                            color="secondary"
                                            tag="button"
                      />
</NavLink>,
                    <Button
                      className={undefined}
                      color="secondary"
                      onClick={[Function]}
                      tag="button"
/>,
                  ],
                  "className": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Button
                        className={undefined}
                        color="secondary"
                        tag="button"
/>,
                      "href": "/myProfile/personalInformation",
                      "tag": "a",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "color": "secondary",
                        "tag": "button",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Button
                        className={undefined}
                        color="secondary"
                        tag="button"
/>,
                      "href": "/myProfile/alerts",
                      "tag": "a",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "color": "secondary",
                        "tag": "button",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": undefined,
                      "color": "secondary",
                      "onClick": [Function],
                      "tag": "button",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className={undefined}
>
            <span>
                        
            </span>
</div>,
          <Dropdown
            active={false}
            addonType={false}
            className={undefined}
            direction="down"
            inNavbar={false}
            isOpen={false}
            nav={false}
            onClick={undefined}
            setActiveFromChild={false}
            toggle={[Function]}
>
            <DropdownToggle
                        aria-expanded={false}
                        aria-haspopup={true}
                        caret={true}
                        color="secondary"
                        data-toggle="dropdown"
                        tag="span"
            >
                        Bonjour undefined !
            </DropdownToggle>
            <DropdownMenu
                        flip={true}
                        tag="div"
            >
                        <p>
                                    undefined undefined
                        </p>
                        <span />
                        <span />
                        <div
                                    className={undefined}
                        >
                                    <NavLink
                                                href="/myProfile/personalInformation"
                                                tag="a"
                                    >
                                                <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                                />
                                    </NavLink>
                                    <NavLink
                                                href="/myProfile/alerts"
                                                tag="a"
                                    >
                                                <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                                />
                                    </NavLink>
                                    <Button
                                                className={undefined}
                                                color="secondary"
                                                onClick={[Function]}
                                                tag="button"
                                    />
                        </div>
            </DropdownMenu>
</Dropdown>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              
</span>,
            "className": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
            ],
            "type": "span",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "addonType": false,
            "children": Array [
              <DropdownToggle
                aria-expanded={false}
                aria-haspopup={true}
                caret={true}
                color="secondary"
                data-toggle="dropdown"
                tag="span"
>
                Bonjour undefined !
</DropdownToggle>,
              <DropdownMenu
                flip={true}
                tag="div"
>
                <p>
                                undefined undefined
                </p>
                <span />
                <span />
                <div
                                className={undefined}
                >
                                <NavLink
                                                href="/myProfile/personalInformation"
                                                tag="a"
                                >
                                                <Button
                                                                className={undefined}
                                                                color="secondary"
                                                                tag="button"
                                                />
                                </NavLink>
                                <NavLink
                                                href="/myProfile/alerts"
                                                tag="a"
                                >
                                                <Button
                                                                className={undefined}
                                                                color="secondary"
                                                                tag="button"
                                                />
                                </NavLink>
                                <Button
                                                className={undefined}
                                                color="secondary"
                                                onClick={[Function]}
                                                tag="button"
                                />
                </div>
</DropdownMenu>,
            ],
            "className": undefined,
            "direction": "down",
            "inNavbar": false,
            "isOpen": false,
            "nav": false,
            "onClick": undefined,
            "setActiveFromChild": false,
            "toggle": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "aria-expanded": false,
                "aria-haspopup": true,
                "caret": true,
                "children": "Bonjour undefined !",
                "color": "secondary",
                "data-toggle": "dropdown",
                "tag": "span",
              },
              "ref": null,
              "rendered": "Bonjour undefined !",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <p>
                    undefined undefined
</p>,
                  <span />,
                  <span />,
                  <div
                    className={undefined}
>
                    <NavLink
                                        href="/myProfile/personalInformation"
                                        tag="a"
                    >
                                        <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                        />
                    </NavLink>
                    <NavLink
                                        href="/myProfile/alerts"
                                        tag="a"
                    >
                                        <Button
                                                            className={undefined}
                                                            color="secondary"
                                                            tag="button"
                                        />
                    </NavLink>
                    <Button
                                        className={undefined}
                                        color="secondary"
                                        onClick={[Function]}
                                        tag="button"
                    />
</div>,
                ],
                "flip": true,
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "undefined undefined",
                  },
                  "ref": null,
                  "rendered": "undefined undefined",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <NavLink
                        href="/myProfile/personalInformation"
                        tag="a"
>
                        <Button
                                                className={undefined}
                                                color="secondary"
                                                tag="button"
                        />
</NavLink>,
                      <NavLink
                        href="/myProfile/alerts"
                        tag="a"
>
                        <Button
                                                className={undefined}
                                                color="secondary"
                                                tag="button"
                        />
</NavLink>,
                      <Button
                        className={undefined}
                        color="secondary"
                        onClick={[Function]}
                        tag="button"
/>,
                    ],
                    "className": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Button
                          className={undefined}
                          color="secondary"
                          tag="button"
/>,
                        "href": "/myProfile/personalInformation",
                        "tag": "a",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "className": undefined,
                          "color": "secondary",
                          "tag": "button",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Button
                          className={undefined}
                          color="secondary"
                          tag="button"
/>,
                        "href": "/myProfile/alerts",
                        "tag": "a",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "className": undefined,
                          "color": "secondary",
                          "tag": "button",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": undefined,
                        "color": "secondary",
                        "onClick": [Function],
                        "tag": "button",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;
